# prologue-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  Procfile  README.md  fly.toml
Assets/Prompt Files/: Character Prompts.md  another deck.md  test_deck.md
Assets/Test Prompt Files/: test_deck.md
src/: bot_data.rs  config.rs  deck.rs  deckbuilder.rs  main.rs  prompt_deck.rs  simple_random.rs
src/prompt_deck/: prompt_deck_commands.rs  prompt_deck_data.rs  prompt_deck_loader.rs
