[package]
name = "prologue-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
toml = "0.5.8"
serde = { version = "1.0.130" }
rand = "0.8.4"
tap = "1.0.1"
poise = "0.2.2"
