[package]
name = "prologue-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
toml = "0.5.9"
serde = { version = "1.0.137" }
rand = "0.8.5"
tap = "1.0.1"
poise = "0.2.2"
envy = "0.4"

# Defining bin here to make multi stage docker build work
[[bin]]
name = "prologue-bot"
path = "src/main.rs"
